# run0edit

./: .gitignore  CHANGELOG.md  LICENSE-MIT  README.md  SECURITY.md  build.py  pyproject.toml  run0edit  run0edit-inner.sh  run0edit-local  run0edit-main.sh  run0edit-secureblue.patch  run0edit_inner.py  run0edit_main.py
.github/: dependabot.yml
.github/workflows/: integration-test.yml  lint.yml  linters.yml  mypy.yml  package-release.yml  pylint.yml  ruff.yml  shellcheck.yml  test.yml  unittest.yml  zizmor.yml
integration-test/: butane-config.yml  integration_tests.py  mock-editor.sh
rpm/: run0edit.spec
test/: __init__.py  integration_tests.py  mock-editor.sh  test_run0edit_common.py  test_run0edit_inner.py  test_run0edit_main.py
