[project]
name = "run0edit"
version = "0.5.0"
requires-python = ">= 3.9"
authors = [{name = "Daniel Hast"}]
maintainers = [{name = "Daniel Hast"}]
description = "run0edit allows a permitted user to edit a file as root using run0."
readme = "README.md"
license = "Apache-2.0"
license-files = "LICENSE"

[project.urls]
Repository = "https://github.com/HastD/run0edit"
Issues = "https://github.com/HastD/run0edit/issues"

[tool.pylint."MESSAGES CONTROL"]
disable = "too-few-public-methods"

[tool.ruff]
line-length = 100
