[project]
name = "run0edit"
version = "0.5.5"
requires-python = ">= 3.10"
authors = [{name = "Daniel Hast"}]
maintainers = [{name = "Daniel Hast"}]
description = "run0edit allows a permitted user to edit a file as root using run0."
readme = "README.md"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]

[project.urls]
Repository = "https://github.com/HastD/run0edit"
Issues = "https://github.com/HastD/run0edit/issues"

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "test.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "integration_tests"
disallow_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "FIX", # flake8-fixme
    "ICN", # flake8-import-conventions
    "PIE", # flake8-pie
    "Q", # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TC", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "I", # isort
    "C90", # mccabe
    "N", # pep8-naming
    "E", # pycodestyle error
    "W", # pycodestyle warning
    "F", # pyflakes
    "PL", # pylint
    "UP", # pyupgrade
    "FURB", # refurb
    "RUF", # Ruff-specific rules
]

ignore = [
    "S603", # subprocess-without-shell-equals-true
    "SIM105", # suppressible-exception
    "N806", # non-lowercase-variable-in-function
]

mccabe.max-complexity = 8
pycodestyle.max-doc-length = 100
pylint.max-args = 6
pylint.max-statements = 30

[tool.ruff.lint.per-file-ignores]
# Ignore "too many function arguments" and "private member accessed" in tests
"test/**.py" = ["PLR0913", "SLF001"]
"integration-test/**.py" = ["PLR0913", "SLF001"]

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.13",
]
